gen/antlr/AngularParser.java
// Generated from C:/Users/ASUS/IdeaProjects/C-Project-A/code/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MultiLineComment=1, SingleLineComment=2, WS=3, NEWLINE=4, Import=5, Export=6, 
		From=7, Out=8, Property=9, Ensure=10, EnsureAlways=11, Check=12, Mixin=13, 
		Extends=14, Super=15, Implements=16, Let=17, Component=18, CommonModule=19, 
		RouterOutlet=20, OnInit=21, Input=22, Interface=23, NGIF=24, NGFOR=25, 
		SRC=26, ALT=27, Selector=28, Imports=29, TemplateUrl=30, StyleUrls=31, 
		Standalone=32, FormsModule=33, StyleUrl=34, Int=35, Float=36, Double=37, 
		Bool=38, New=39, Var=40, String=41, Array=42, Auto=43, Break=44, Case=45, 
		Catch=46, Char=47, Class=48, Const=49, Continue=50, Default=51, Do=52, 
		Else=53, Enum=54, False_=55, Final=56, For=57, Goto=58, If=59, Namespace=60, 
		Nullptr=61, Operator=62, Override=63, Private=64, Protected=65, Public=66, 
		Static=67, Package=68, Return=69, Short=70, Struct=71, Switch=72, This=73, 
		True_=74, Virtual=75, Void=76, While=77, Function_=78, With=79, Throw=80, 
		Any=81, In=82, Try=83, As=84, Number=85, Unique=86, Symbol=87, Undefined=88, 
		Object=89, Constructor=90, Abstract=91, Require=92, Module=93, Declare=94, 
		Angular=95, Common=96, Core=97, Router=98, SomeClass=99, AngularCore=100, 
		LeftParen=101, RightParen=102, LeftBracket=103, RightBracket=104, LeftBrace=105, 
		RightBrace=106, Plus=107, Minus=108, Star=109, Div=110, Mod=111, Xor=112, 
		And=113, Or=114, Tilde=115, Not=116, Assign=117, Less=118, Greater=119, 
		PlusAssign=120, MinusAssign=121, StarAssign=122, DivAssign=123, ModAssign=124, 
		XorAssign=125, AndAssign=126, OrAssign=127, LeftShiftAssign=128, RightShiftAssign=129, 
		Equal=130, NotEqual=131, LessEqual=132, GreaterEqual=133, AndAnd=134, 
		OrOr=135, PlusPlus=136, MinusMinus=137, Comma=138, Question=139, Colon=140, 
		Doublecolon=141, Semi=142, Dot=143, Ellipsis=144, Underscore=145, Power=146, 
		Hashtag=147, Arrow=148, NullLiteral=149, Quotation=150, Div_=151, LBRACE_LBRACE=152, 
		RBRACE_RBRACE=153, QuestionDot=154, H1=155, H2=156, H3=157, H4=158, IMG_=159, 
		P=160, Click=161, Button=162, Display=163, Flex_Direction=164, Gap=165, 
		Padding=166, Box_Size=167, Flex=168, Border=169, Text_Align=170, Max_With=171, 
		Height=172, Cursor=173, Transition=174, Pointer=175, Center=176, Solid=177, 
		Background_Color=178, Margin=179, Row=180, Column=181, Border_Box=182, 
		DecimalLiteral_UNIT=183, STRING=184, QUOTED_STRING=185, HEXCHAR=186, String_DecimalLiteral=187, 
		DecimalLiteral=188, HexIntegerLiteral=189, At=190, Identifier=191, EVENT_BINDING=192, 
		StringLiteral=193, HTML_COMMENT=194, HTML_CONDITIONAL_COMMENT=195, XML=196, 
		DTD=197, SCRIPT_OPEN=198, STYLE_OPEN=199, TAG_OPEN_1=200, TAG_SLASH=201, 
		TAG_EQUALS=202, TAG_NAME=203, TEXT=204, TAG_WHITESPACE=205, SCRIPT_BODY=206, 
		SCRIPT_SHORT_BODY=207, STYLE_BODY=208, STYLE_SHORT_BODY=209, ATTRIBUT=210, 
		CLASS_SELECTOR=211, ID_SELECTOR=212, UNIT=213;
	public static final int
		RULE_program = 0, RULE_sourceElements = 1, RULE_statement = 2, RULE_importStatement = 3, 
		RULE_importFromBlock = 4, RULE_importDefault = 5, RULE_importFrom = 6, 
		RULE_importNamespace = 7, RULE_commaReservedWord = 8, RULE_interfaceStatement = 9, 
		RULE_interfaceAttributes = 10, RULE_propertyDeclaration = 11, RULE_componentStatement = 12, 
		RULE_componentOptions = 13, RULE_componentOption = 14, RULE_optionselector = 15, 
		RULE_optionimports = 16, RULE_importsProperties = 17, RULE_reservedWordAndComma = 18, 
		RULE_optiontemplateUrl = 19, RULE_urlStatement = 20, RULE_optionstyleUrls = 21, 
		RULE_exportStatement = 22, RULE_classBody = 23, RULE_propertyList = 24, 
		RULE_bodyList = 25, RULE_bodyListinner = 26, RULE_propertyDeclarationCom = 27, 
		RULE_methodDeclaration = 28, RULE_parameterList = 29, RULE_parameterComma = 30, 
		RULE_parameter = 31, RULE_methodBody = 32, RULE_statementMethod = 33, 
		RULE_declarationString = 34, RULE_declarationName = 35, RULE_htmlElements = 36, 
		RULE_htmlElement = 37, RULE_htmlTagNameStart = 38, RULE_htmlTagNameEnd = 39, 
		RULE_htmlElementContent = 40, RULE_contentHtml = 41, RULE_htmlImgAttribute = 42, 
		RULE_elements = 43, RULE_htmlBrace = 44, RULE_htmlAttributes = 45, RULE_cssElement = 46, 
		RULE_selector = 47, RULE_selectorInternal = 48, RULE_cssProperty = 49, 
		RULE_css = 50, RULE_cssValue = 51, RULE_decimalLiteral_UNIT = 52, RULE_decimalLiteralUnit = 53, 
		RULE_decimalLiteral = 54, RULE_tagName = 55, RULE_htmlKeyword = 56, RULE_identifier = 57, 
		RULE_type = 58, RULE_reservedWord = 59, RULE_stringLiteral = 60, RULE_keyword = 61, 
		RULE_eos = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sourceElements", "statement", "importStatement", "importFromBlock", 
			"importDefault", "importFrom", "importNamespace", "commaReservedWord", 
			"interfaceStatement", "interfaceAttributes", "propertyDeclaration", "componentStatement", 
			"componentOptions", "componentOption", "optionselector", "optionimports", 
			"importsProperties", "reservedWordAndComma", "optiontemplateUrl", "urlStatement", 
			"optionstyleUrls", "exportStatement", "classBody", "propertyList", "bodyList", 
			"bodyListinner", "propertyDeclarationCom", "methodDeclaration", "parameterList", 
			"parameterComma", "parameter", "methodBody", "statementMethod", "declarationString", 
			"declarationName", "htmlElements", "htmlElement", "htmlTagNameStart", 
			"htmlTagNameEnd", "htmlElementContent", "contentHtml", "htmlImgAttribute", 
			"elements", "htmlBrace", "htmlAttributes", "cssElement", "selector", 
			"selectorInternal", "cssProperty", "css", "cssValue", "decimalLiteral_UNIT", 
			"decimalLiteralUnit", "decimalLiteral", "tagName", "htmlKeyword", "identifier", 
			"type", "reservedWord", "stringLiteral", "keyword", "eos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'import'", "'export'", "'from'", "'out'", 
			"'property'", "'ensure'", "'ensureAlways'", "'check'", "'mixin'", "'extends'", 
			"'super'", "'implements'", "'let'", "'Component'", "'CommonModule'", 
			"'RouterOutlet'", "'OnInit'", "'Input'", "'interface'", "'ngIf'", "'ngFor'", 
			"'src'", "'alt'", "'selector'", "'imports'", "'templateUrl'", "'styleUrls'", 
			"'standalone'", "'FormsModule'", "'styleUrl'", "'int'", "'float'", "'double'", 
			"'bool'", "'new'", "'var'", "'string'", "'Array'", "'auto'", "'break'", 
			"'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'", 
			"'do'", "'else'", "'enum'", "'false'", "'final'", "'for'", "'goto'", 
			"'if'", "'namespace'", "'nullptr'", "'operator'", "'override'", "'private'", 
			"'protected'", "'public'", "'static'", "'package'", "'return'", "'short'", 
			"'struct'", "'switch'", "'this'", "'true'", "'virtual'", "'void'", "'while'", 
			"'function'", "'with'", "'throw'", "'any'", "'in'", "'try'", "'as'", 
			"'number'", "'unique'", "'symbol'", "'undefined'", "'object'", "'constructor'", 
			"'abstract'", "'require'", "'module'", "'declare'", "'angular'", "'common'", 
			"'core'", "'router'", "'SomeClass'", "'angularCore'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "'+'", "'-'", "'*'", null, "'%'", null, "'&'", "'|'", 
			"'~'", "'!'", null, "'<'", "'>'", "'+='", "'-='", "'*='", "'/='", "'%='", 
			"'^='", "'&='", "'|='", "'<<='", "'>>='", "'=='", "'!='", "'<='", "'>='", 
			"'&&'", "'||'", "'++'", "'--'", "','", "'?'", "':'", "'::'", "';'", "'.'", 
			"'...'", "'_'", "'**'", "'#'", "'=>'", "'null'", "'''", "'div'", "'{{'", 
			"'}}'", "'?.'", "'h1'", "'h2'", "'h3'", "'h4'", "'img'", "'p'", "'(click)'", 
			"'button'", "'display'", "'flex-direction'", "'gap'", "'padding'", "'box-sizing'", 
			"'flex'", "'border'", "'text-align'", "'max-width'", "'height'", "'cursor'", 
			"'transition'", "'pointer'", "'center'", "'solid'", "'background-color'", 
			"'margin'", "'row'", "'column'", "'border-box'", null, null, null, null, 
			null, null, null, "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MultiLineComment", "SingleLineComment", "WS", "NEWLINE", "Import", 
			"Export", "From", "Out", "Property", "Ensure", "EnsureAlways", "Check", 
			"Mixin", "Extends", "Super", "Implements", "Let", "Component", "CommonModule", 
			"RouterOutlet", "OnInit", "Input", "Interface", "NGIF", "NGFOR", "SRC", 
			"ALT", "Selector", "Imports", "TemplateUrl", "StyleUrls", "Standalone", 
			"FormsModule", "StyleUrl", "Int", "Float", "Double", "Bool", "New", "Var", 
			"String", "Array", "Auto", "Break", "Case", "Catch", "Char", "Class", 
			"Const", "Continue", "Default", "Do", "Else", "Enum", "False_", "Final", 
			"For", "Goto", "If", "Namespace", "Nullptr", "Operator", "Override", 
			"Private", "Protected", "Public", "Static", "Package", "Return", "Short", 
			"Struct", "Switch", "This", "True_", "Virtual", "Void", "While", "Function_", 
			"With", "Throw", "Any", "In", "Try", "As", "Number", "Unique", "Symbol", 
			"Undefined", "Object", "Constructor", "Abstract", "Require", "Module", 
			"Declare", "Angular", "Common", "Core", "Router", "SomeClass", "AngularCore", 
			"LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
			"RightBrace", "Plus", "Minus", "Star", "Div", "Mod", "Xor", "And", "Or", 
			"Tilde", "Not", "Assign", "Less", "Greater", "PlusAssign", "MinusAssign", 
			"StarAssign", "DivAssign", "ModAssign", "XorAssign", "AndAssign", "OrAssign", 
			"LeftShiftAssign", "RightShiftAssign", "Equal", "NotEqual", "LessEqual", 
			"GreaterEqual", "AndAnd", "OrOr", "PlusPlus", "MinusMinus", "Comma", 
			"Question", "Colon", "Doublecolon", "Semi", "Dot", "Ellipsis", "Underscore", 
			"Power", "Hashtag", "Arrow", "NullLiteral", "Quotation", "Div_", "LBRACE_LBRACE", 
			"RBRACE_RBRACE", "QuestionDot", "H1", "H2", "H3", "H4", "IMG_", "P", 
			"Click", "Button", "Display", "Flex_Direction", "Gap", "Padding", "Box_Size", 
			"Flex", "Border", "Text_Align", "Max_With", "Height", "Cursor", "Transition", 
			"Pointer", "Center", "Solid", "Background_Color", "Margin", "Row", "Column", 
			"Border_Box", "DecimalLiteral_UNIT", "STRING", "QUOTED_STRING", "HEXCHAR", 
			"String_DecimalLiteral", "DecimalLiteral", "HexIntegerLiteral", "At", 
			"Identifier", "EVENT_BINDING", "StringLiteral", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
			"XML", "DTD", "SCRIPT_OPEN", "STYLE_OPEN", "TAG_OPEN_1", "TAG_SLASH", 
			"TAG_EQUALS", "TAG_NAME", "TEXT", "TAG_WHITESPACE", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", 
			"STYLE_BODY", "STYLE_SHORT_BODY", "ATTRIBUT", "CLASS_SELECTOR", "ID_SELECTOR", 
			"UNIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public SourceElementsContext sourceElements() {
			return getRuleContext(SourceElementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8388704L) != 0) || ((((_la - 105)) & ~0x3f) == 0 && ((1L << (_la - 105)) & 216102696837455873L) != 0) || _la==STRING || _la==At) {
				{
				setState(126);
				sourceElements();
				}
			}

			setState(129);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceElementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SourceElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterSourceElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitSourceElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitSourceElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceElementsContext sourceElements() throws RecognitionException {
		SourceElementsContext _localctx = new SourceElementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				statement();
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8388704L) != 0) || ((((_la - 105)) & ~0x3f) == 0 && ((1L << (_la - 105)) & 216102696837455873L) != 0) || _la==STRING || _la==At );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlStatementLabelContext extends StatementContext {
		public HtmlElementsContext htmlElements() {
			return getRuleContext(HtmlElementsContext.class,0);
		}
		public HtmlStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterHtmlStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitHtmlStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitHtmlStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExportStatementLabelContext extends StatementContext {
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ExportStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterExportStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitExportStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitExportStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStatementLabelContext extends StatementContext {
		public ComponentStatementContext componentStatement() {
			return getRuleContext(ComponentStatementContext.class,0);
		}
		public ComponentStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssStatementLabelContext extends StatementContext {
		public CssElementContext cssElement() {
			return getRuleContext(CssElementContext.class,0);
		}
		public CssStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterCssStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitCssStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitCssStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementLabelContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceStatementLabelContext extends StatementContext {
		public InterfaceStatementContext interfaceStatement() {
			return getRuleContext(InterfaceStatementContext.class,0);
		}
		public InterfaceStatementLabelContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterInterfaceStatementLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitInterfaceStatementLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitInterfaceStatementLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Import:
				_localctx = new ImportStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				importStatement();
				}
				break;
			case Interface:
				_localctx = new InterfaceStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				interfaceStatement();
				}
				break;
			case At:
				_localctx = new ComponentStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				componentStatement();
				}
				break;
			case Export:
				_localctx = new ExportStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				exportStatement();
				}
				break;
			case Less:
				_localctx = new HtmlStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				htmlElements();
				}
				break;
			case LeftBrace:
			case Comma:
			case Dot:
			case Div_:
			case LBRACE_LBRACE:
			case RBRACE_RBRACE:
			case QuestionDot:
			case H1:
			case H2:
			case H3:
			case H4:
			case IMG_:
			case P:
			case Button:
			case STRING:
				_localctx = new CssStatementLabelContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				cssElement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
